Fix styling on hubs list to make accordion icons sit vertically aligned

--- a/app/assets/stylesheets/darkswarm/active_table.css.sass
+++ b/app/assets/stylesheets/darkswarm/active_table.css.sass
@@ -6,7 +6,6 @@
   margin: 2em 0em
   @include user-select(none)
   .active_table_row
-    padding: 0.8em 0.5em  
     display: block
     &:first-child
       cursor: pointer
